src/objects/ACSFUL001__Account_Set_Account__c.object
<CustomObject>
    <description>Junction object between Customer and Customer Set.</description>
    <fields>
        <fullName>ACSFUL001__Account_Set__c</fullName>
        <label>Customer Set</label>
        <referenceTo>ACSFUL001__Account_Set__c</referenceTo>
        <relationshipLabel>Customer Set Customers</relationshipLabel>
        <relationshipName>Account_Set_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACSFUL001__Account__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Set Customers</relationshipLabel>
        <relationshipName>Account_Set_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACSFUL001__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACSFUL001__RECORD_LINK, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <label>Customer Set Customer</label>
    <nameField>
        <displayFormat>ASA-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Set Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACSFUL001__Compare_Customer_Set_Customer_Sales_Org</fullName>
        <active>true</active>
        <description>Validates that the sales org of Customer and Customer Set are same</description>
        <errorConditionFormula>TEXT(ACSFUL001__Account__r.ACSFUL001__Account_Template__r.ACSFUL001__Sales_Org__c) &lt;&gt; TEXT(ACSFUL001__Account_Set__r.ACSFUL001__Sales_Org__c)</errorConditionFormula>
        <errorMessage>Sales Org of Customer and Customer Set should be same</errorMessage>
    </validationRules>
</CustomObject>